// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/home route displays anonymous catalog 1`] = `
<body>
  <div>
     
    <main>
      <header>
        <nav>
          <button
            class="secondary"
          >
            <span
              class="material-icons"
            >
              login
            </span>
            
            
            
          </button>
        </nav>
         
        <div>
          <h1>
            Bienvenue sur Tabulous !
          </h1>
        </div>
      </header>
       
      <div>
         
        <h2>
          Jeux disponibles
        </h2>
         
        <section
          aria-roledescription="catalog"
        >
          <article>
            <img
              alt="Jeu de 32 cartes"
              src="http://localhost:3001/games/32-cards/catalog/cover.webp"
            />
             
            <div
              class="content"
            >
              <legend>
                <div
                  class="title"
                >
                  <h3>
                    Jeu de 32 cartes
                  </h3>
                   
                  <details
                    class="hidden"
                  >
                    <summary>
                      <strong>
                        Créé par : 
                      </strong>
                      undefined
                    </summary>
                     
                    <p>
                      <strong>
                        Illustré par : 
                      </strong>
                      undefined
                    </p>
                     
                    <p>
                      <strong>
                        Distribué par : 
                      </strong>
                      undefined
                    </p>
                  </details>
                </div>
                 
                <span
                  class="characteristics"
                >
                  <span
                    class="hidden"
                  >
                    <span
                      class="material-icons"
                    >
                      people
                    </span>
                    undefined
                  </span>
                   
                  <span
                    class="hidden"
                  >
                    <span
                      class="material-icons"
                    >
                      access_time
                    </span>
                    null'
                  </span>
                   
                  <span
                    class="hidden"
                  >
                    <span
                      class="material-icons"
                    >
                      person
                    </span>
                    null+
                  </span>
                </span>
              </legend>
            </div>
          </article>
          <article>
            <img
              alt="Solitaire"
              src="http://localhost:3001/games/klondike/catalog/cover.webp"
            />
             
            <div
              class="content"
            >
              <legend>
                <div
                  class="title"
                >
                  <h3>
                    Solitaire
                  </h3>
                   
                  <details
                    class="hidden"
                  >
                    <summary>
                      <strong>
                        Créé par : 
                      </strong>
                      undefined
                    </summary>
                     
                    <p>
                      <strong>
                        Illustré par : 
                      </strong>
                      undefined
                    </p>
                     
                    <p>
                      <strong>
                        Distribué par : 
                      </strong>
                      undefined
                    </p>
                  </details>
                </div>
                 
                <span
                  class="characteristics"
                >
                  <span
                    class="hidden"
                  >
                    <span
                      class="material-icons"
                    >
                      people
                    </span>
                    undefined
                  </span>
                   
                  <span>
                    <span
                      class="material-icons"
                    >
                      access_time
                    </span>
                    15'
                  </span>
                   
                  <span>
                    <span
                      class="material-icons"
                    >
                      person
                    </span>
                    7+
                  </span>
                </span>
              </legend>
            </div>
          </article>
        </section>
      </div>
    </main>
     
    
  </div>
</body>
`;

exports[`/home route displays connected catalog 1`] = `
<body>
  <div>
     
    <main>
      <header>
        <nav>
          <button
            class="secondary"
          >
            <span
              class="material-icons"
            >
              directions_run
            </span>
            
            
            
          </button>
        </nav>
         
        <div>
          <h1>
            Bonjour John Doo !
          </h1>
        </div>
      </header>
       
      <div>
        <h2>
          Parties en cours
        </h2>
         
        <section
          aria-roledescription="games"
        >
          
          <article>
            <span
              class="title"
            >
              <h3>
                Jeu de 32 cartes
              </h3>
               
              <button
                class="secondary"
              >
                <span
                  class="material-icons"
                >
                  delete
                </span>
                
                
                
              </button>
            </span>
             
            <span
              class="created"
            >
              15 juil., 10:15
            </span>
             
            <span
              class="players"
            >
              avec 
            </span>
          </article>
        </section>
         
        <h2>
          Jeux disponibles
        </h2>
         
        <section
          aria-roledescription="catalog"
        >
          <article>
            <img
              alt="Jeu de 32 cartes"
              src="http://localhost:3001/games/32-cards/catalog/cover.webp"
            />
             
            <div
              class="content"
            >
              <legend>
                <div
                  class="title"
                >
                  <h3>
                    Jeu de 32 cartes
                  </h3>
                   
                  <details
                    class="hidden"
                  >
                    <summary>
                      <strong>
                        Créé par : 
                      </strong>
                      undefined
                    </summary>
                     
                    <p>
                      <strong>
                        Illustré par : 
                      </strong>
                      undefined
                    </p>
                     
                    <p>
                      <strong>
                        Distribué par : 
                      </strong>
                      undefined
                    </p>
                  </details>
                </div>
                 
                <span
                  class="characteristics"
                >
                  <span
                    class="hidden"
                  >
                    <span
                      class="material-icons"
                    >
                      people
                    </span>
                    undefined
                  </span>
                   
                  <span
                    class="hidden"
                  >
                    <span
                      class="material-icons"
                    >
                      access_time
                    </span>
                    null'
                  </span>
                   
                  <span
                    class="hidden"
                  >
                    <span
                      class="material-icons"
                    >
                      person
                    </span>
                    null+
                  </span>
                </span>
              </legend>
            </div>
          </article>
          <article>
            <img
              alt="Solitaire"
              src="http://localhost:3001/games/klondike/catalog/cover.webp"
            />
             
            <div
              class="content"
            >
              <legend>
                <div
                  class="title"
                >
                  <h3>
                    Solitaire
                  </h3>
                   
                  <details
                    class="hidden"
                  >
                    <summary>
                      <strong>
                        Créé par : 
                      </strong>
                      undefined
                    </summary>
                     
                    <p>
                      <strong>
                        Illustré par : 
                      </strong>
                      undefined
                    </p>
                     
                    <p>
                      <strong>
                        Distribué par : 
                      </strong>
                      undefined
                    </p>
                  </details>
                </div>
                 
                <span
                  class="characteristics"
                >
                  <span
                    class="hidden"
                  >
                    <span
                      class="material-icons"
                    >
                      people
                    </span>
                    undefined
                  </span>
                   
                  <span>
                    <span
                      class="material-icons"
                    >
                      access_time
                    </span>
                    15'
                  </span>
                   
                  <span>
                    <span
                      class="material-icons"
                    >
                      person
                    </span>
                    7+
                  </span>
                </span>
              </legend>
            </div>
          </article>
          <article>
            <img
              alt="6 qui prend"
              src="http://localhost:3001/games/6-takes/catalog/cover.webp"
            />
             
            <div
              class="content"
            >
              <legend>
                <div
                  class="title"
                >
                  <h3>
                    6 qui prend
                  </h3>
                   
                  <details
                    class="hidden"
                  >
                    <summary>
                      <strong>
                        Créé par : 
                      </strong>
                      undefined
                    </summary>
                     
                    <p>
                      <strong>
                        Illustré par : 
                      </strong>
                      undefined
                    </p>
                     
                    <p>
                      <strong>
                        Distribué par : 
                      </strong>
                      undefined
                    </p>
                  </details>
                </div>
                 
                <span
                  class="characteristics"
                >
                  <span
                    class="hidden"
                  >
                    <span
                      class="material-icons"
                    >
                      people
                    </span>
                    undefined
                  </span>
                   
                  <span>
                    <span
                      class="material-icons"
                    >
                      access_time
                    </span>
                    15'
                  </span>
                   
                  <span>
                    <span
                      class="material-icons"
                    >
                      person
                    </span>
                    10+
                  </span>
                </span>
              </legend>
            </div>
          </article>
        </section>
      </div>
    </main>
     
    
  </div>
</body>
`;
